--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "validate": {
     "nameMatch": "Имя может содержать только латинские буквы и цифры",
     "passwordMatch": "Пароль может содержать только латинские буквы и цифры",
+    "email": "Неверный формат email",
     "maxLength": "Максимальная длина поля {{input}}: {{length}}",
     "minLength": "Минимальная длина поля {{input}}: {{length}}"
   },
