--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,13 +2,17 @@
   "test": "test RU",
   "errors": {
     "409UserExist": "Пользователь с данным email уже существует",
-    "409NameExist": "Пользователь с данным имененм уже существует",
+    "409NameExist": "Пользователь с данным именем уже существует",
+    "409SectionNameExist": "Раздел с данным именем уже существует",
     "401InvalidUserOrPassword": "ПОльзователь с данными email или пароль не найден",
     "500ServerError": "Ой ой... Что-то пошло не так",
     "403AccessDenied": "В доступе отказано",
-    "404incorrectPassword": "Неверно введен пароль"
+    "404incorrectPassword": "Неверно введен пароль",
+    "404Section": "Данный раздел не найден",
+    "limit": "Лимит доступных {{name]} {{maxValue}}"
   },
   "validate": {
+    "nameSectionMatch": "Название раздела может содержать латинские и русские буквы, цифры, пробел",
     "nameMatch": "Имя может содержать только латинские буквы и цифры",
     "passwordMatch": "Пароль может содержать только латинские буквы и цифры",
     "email": "Неверный формат email",
@@ -18,6 +22,10 @@
   "inputs": {
     "name": "Имя",
     "email": "Email",
-    "password": "Пароль"
+    "password": "Пароль",
+    "nameSection": "Название раздела"
+  },
+  "names": {
+    "section": "разделов"
   }
 }
