add section tests, fix bugs with in setcion controller, and swagger

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -9,7 +9,7 @@
     "403AccessDenied": "В доступе отказано",
     "404incorrectPassword": "Неверно введен пароль",
     "404Section": "Данный раздел не найден",
-    "limit": "Лимит доступных {{name]} {{maxValue}}"
+    "limit": "Лимит доступных {{name}} {{maxValue}}"
   },
   "validate": {
     "nameSectionMatch": "Название раздела может содержать латинские и русские буквы, цифры, пробел",
