add timer model, note model, note controllers, services

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,16 +4,20 @@
     "409UserExist": "User with this email is already exist",
     "409NameExist": "User with this name is already exist",
     "409SectionNameExist": "Section with this name is already exist",
+    "409NoteNameExist": "Note with this name is already exist in this section",
     "401InvalidEmailOrPassword": "User with these email of password was not found",
     "500ServerError": "Oh oh ... Something went wrong",
     "403AccessDenied": "Access is denied",
     "404incorrectPassword": "Password is invalid",
     "404Section": "This section was not found",
+    "404Note": "This note was not found",
     "limit": "Limit of available {{name]} is {{maxValue}}"
   },
   "validate": {
     "nameSectionMatch": "Name of section can contain only latin and rus letters, numbers, space",
+    "nameNoteMatch": "Name of note can contain only latin and rus letters, numbers, space",
     "nameMatch": "The name can contain only Latin letters and numbers",
+    "descriptionNoteMatch": "Description of note can contain only latin and rus letters, numbers, space",
     "passwordMatch": "The password can contain only Latin letters and numbers",
     "email": "Email is invalid",
     "maxLength": "Max length of {{input}} is {{length}}",
@@ -23,9 +27,12 @@
     "name": "Name",
     "email": "Email",
     "password": "Password",
-    "nameSection": "Name of section"
+    "nameSection": "Name of section",
+    "nameNote": "Name of note",
+    "descriptionNote": "Description of note"
   },
   "names": {
-    "section": "sections"
+    "section": "sections",
+    "note": "notes"
   }
 }
