--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -4,16 +4,20 @@
     "409UserExist": "Пользователь с данным email уже существует",
     "409NameExist": "Пользователь с данным именем уже существует",
     "409SectionNameExist": "Раздел с данным именем уже существует",
+    "409NoteNameExist": "Запись с данным именем уже существует в этом разделе",
     "401InvalidUserOrPassword": "ПОльзователь с данными email или пароль не найден",
     "500ServerError": "Ой ой... Что-то пошло не так",
     "403AccessDenied": "В доступе отказано",
     "404incorrectPassword": "Неверно введен пароль",
     "404Section": "Данный раздел не найден",
+    "404Note": "Данная запись не найдена",
     "limit": "Лимит доступных {{name}} {{maxValue}}"
   },
   "validate": {
     "nameSectionMatch": "Название раздела может содержать латинские и русские буквы, цифры, пробел",
+    "nameNoteMatch": "Название записи может содержать латинские и русские буквы, цифры, пробел",
     "nameMatch": "Имя может содержать только латинские буквы и цифры",
+    "descriptionNoteMatch": "писание записи может содержать латинские и русские буквы, цифры, пробел",
     "passwordMatch": "Пароль может содержать только латинские буквы и цифры",
     "email": "Неверный формат email",
     "maxLength": "Максимальная длина поля {{input}}: {{length}}",
@@ -23,9 +27,12 @@
     "name": "Имя",
     "email": "Email",
     "password": "Пароль",
-    "nameSection": "Название раздела"
+    "nameSection": "Название раздела",
+    "nameNote": "Название записи",
+    "descriptionNote": "Описание записи"
   },
   "names": {
-    "section": "разделов"
+    "section": "разделов",
+    "note": "записей"
   }
 }
